test/files/neg/t9008b.scala
object Test {
  type T = M forSome { type M[_] }
}
